# bones

./: LICENSE  README.md  bones-knapsack.cabal  bones-maxclique.cabal  bones.cabal  stack.yaml
apps/knapsack/: README.md  bones-knapsack.cabal  stack.yaml
apps/knapsack/src/: Knapsack.hs  Main.hs
apps/knapsack/testData/knapPI_13_50_1000_out/: xx002  xx004  xx005  xx011  xx014  xx015  xx019  xx020  xx023  xx026  xx027  xx028  xx030  xx033  xx038  xx040  xx043  xx046  xx049  xx050  xx051  xx052  xx054  xx058  xx065  xx067  xx068  xx070  xx083  xx086  xx087  xx089  xx090  xx093  xx098
apps/knapsack/testData/knapPI_13_50_1000_out/instances/: knapPI_13_50_1000_016  knapPI_13_50_1000_025  knapPI_13_50_1000_069  knapPI_13_50_1000_073
apps/maxclique/: README.md  bones-maxclique.cabal  stack.yaml
apps/maxclique/src/: DIMACParser.hs  Graph.hs  GraphBitArray.hs  Main.hs
apps/maxclique/src/Solvers/: BonesSolver.hs  SequentialSolver.hs  SequentialSolverBBMC.hs  SequentialSolverBitSetArray.hs
apps/tsp/: LICENSE  bones-tsp.cabal
apps/tsp/src/: Main.hs
lib/: bones.cabal
lib/src/Bones/Skeletons/BranchAndBound/HdpH/: Common.hs  GlobalRegistry.hs  Ordered.hs  Sequential.hs  Types.hs  Unordered.hs
src/: Clique.hs  Graph.hs  GraphBitSet.hs  Knapsack.hs  KnapsackArray.hs  Main.hs  Types.hs
src/Bones/Skeletons/BranchAndBound/HdpH/: Broadcast.hs  Common.hs  GlobalRegistry.hs  Safe.hs  Sequential.hs  Types.hs  Util.hs
src/Solvers/: BonesSolver.hs  SequentialSolverBBMC.hs
testData/: test.kp
testData/knapPI_13_50_1000_out/: xx000  xx001  xx003  xx006  xx007  xx008  xx009  xx010  xx012  xx017  xx024  xx029  xx031  xx032  xx034  xx035  xx036  xx037  xx039  xx041  xx045  xx047  xx053  xx055  xx056  xx060  xx061  xx064  xx066  xx072  xx074  xx075  xx076  xx077  xx079  xx080  xx081  xx082  xx084  xx085  (+8 more)
testData/knapPI_13_50_1000_out/instances/: knapPI_13_50_1000_013  knapPI_13_50_1000_018  knapPI_13_50_1000_021  knapPI_13_50_1000_022  knapPI_13_50_1000_042  knapPI_13_50_1000_044  knapPI_13_50_1000_048  knapPI_13_50_1000_057  knapPI_13_50_1000_059  knapPI_13_50_1000_062  knapPI_13_50_1000_063  knapPI_13_50_1000_071  knapPI_13_50_1000_078
