name:                bones-knapsack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/BlairArchibald/bones-knapsack#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          b.archibald.1@research.gla.ac.uk
copyright:           2016 (C) Blair Archibald
category:            parallelism
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bones-knapsack
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  other-modules:       Knapsack
                     , Types
  build-depends:       base
                     , bones                == 0.1.0.0
                     , clock                >= 0.4.1    && < 0.6
                     , containers           >= 0.5.6    && < 0.5.7
                     , hdph                 == 0.2.3
                     , parsec               >= 3.1      && < 3.2
                     , optparse-applicative >= 0.11     && < 0.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/bones-knapsack
