name:                bones-maxclique
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/BlairArchibald/bones-maxclique#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          b.archibald.1@research.gla.ac.uk
copyright:           Copyright: (c) 2016 Blair Archibald
category:            parallelism
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bones-maxclique
  hs-source-dirs:      src/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base > 4.7 && < 5
                     , bones == 0.1.0.0
  default-language:    Haskell2010

test-suite bones-maxclique-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bones-maxclique
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/bones-maxclique
