name:                bones
version:             0.1.0.0
synopsis:            Parallel Skeletons for Branch and Bound Problems
description:         Please see README.md
homepage:            http://github.com/BlairArchibald/bones#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          b.archibald.1@research.gla.ac.uk
copyright:           (c) 2016 Blair Archibald
category:            parallelism
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Bones.Skeletons.BranchAndBound.HdpH.Broadcast
                       Bones.Skeletons.BranchAndBound.HdpH.GlobalRegistry
                       Bones.Skeletons.BranchAndBound.HdpH.Safe
                       Bones.Skeletons.BranchAndBound.HdpH.Types
  build-depends:         base       >= 4.7 && < 5
                       , containers >= 0.5 && < 0.6
                       , cereal     >= 0.4 && < 0.5
                       , deepseq >= 1.3 && <1.5
                       , hdph       == 0.2.3
  default-language:    Haskell2010
  ghc-options: -W -Wall

-- executable bones-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts
--   build-depends:       base
--                      , bones
--   default-language:    Haskell2010

-- test-suite bones-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , bones
--   ghc-options:         -threaded -rtsopts
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlairArchibald/bones
