name:                bones-tsp
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/BlairArchibald/bones-maxclique#readme
license:             BSD3
license-file:        LICENSE
author:              Blair Archibald
maintainer:          b.archibald.1@research.gla.ac.uk
copyright:           Copyright: (c) 2016 Blair Archibald
category:            parallelism
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bones-tsp
  hs-source-dirs:      src/
  main-is:             Main.hs
  other-modules:       
  build-depends:       array                >= 0.5      && < 0.6
                     , base                 >= 4.8      && < 5
                     , bones                == 0.1.0.0
                     , clock                >= 0.6      && < 0.8
                     , containers           >= 0.5     && < 0.6
                     , cereal
                     , deepseq
                     , hdph                 == 0.2.3
                     , optparse-applicative >= 0.11     && < 0.13
                     , regex-posix          >= 0.95     && < 1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -O2 -funbox-strict-fields
